# pyinit

./: .gitignore  README.md  pyproject.toml  setup.py
pyinit/: __main__.py
pyinit/data/templates/basic/: .gitignore.sample  README.md.sample  install-dev.bat.sample  install-edit.sh  pyproject.toml.sample  run_tests.sh.sample  tox.ini.sample
pyinit/data/templates/basic-cli/: .gitignore.sample  pyproject.toml.sample  run_tests.sh.sample  tox.ini.sample
pyinit/data/templates/basic-cli/app_name/: __main__.py.sample
pyinit/data/templates/basic-library/: .gitignore.sample  README.md.sample  install-dev copy.sh.sample  pyproject.toml.sample
pyinit/data/templates/basic/app_name/: __main__.py.sample
pyinit/src/: initializer.py
